--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,12 +3,333 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NavigationMenuFragments.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
+
+           <RelativeLayout
+               android:id="@+id/header"
+               android:layout_width="match_parent"
+               android:layout_height="130dp"
+               android:background="@color/backgroundcolor">
+
+               <ImageView
+                   android:id="@+id/edit"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/ic_create_black_24dp"
+                   android:layout_alignParentRight="true"
+                   android:layout_alignParentTop="true"
+                   android:padding="10dp"/>
+                   //android:onClick="disable"
+
+               <TextView
+                   android:id="@+id/save"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="save"
+                   android:textStyle="bold"
+                   android:textSize="20dp"
+                   android:layout_alignParentRight="true"
+                   android:layout_alignParentBottom="true"
+                   android:padding="10dp"
+                   android:textColor="#0C0C0C"
+                   android:enabled="false"/>
+
+           <ImageView
+               android:layout_marginTop="10dp"
+               android:id="@+id/icon"
+               android:layout_width="wrap_content"
+               android:layout_height="100dp"
+               android:layout_centerHorizontal="true"
+               android:src="@drawable/person"
+               android:enabled="false"
+               />
+           <ImageView
+                android:id="@+id/plus"
+               android:layout_width="20dp"
+               android:layout_height="30dp"
+               android:src="@drawable/plus"
+               android:layout_marginVertical="80dp"
+               android:layout_marginHorizontal="220dp"
+               android:enabled="false"
+               />
+           </RelativeLayout>
+
+       <ScrollView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_below="@+id/header">
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_below="@+id/header"
+               android:layout_marginTop="10dp">
+
+
+           <com.google.android.material.textfield.TextInputLayout
+               android:id="@+id/name1"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="20dp"
+               android:hint="full name"
+               android:layout_marginStart="3dp"
+               app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+
+               <com.google.android.material.textfield.TextInputEditText
+                   android:id="@+id/name"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:inputType="text"
+                   android:enabled="false">
+
+               </com.google.android.material.textfield.TextInputEditText>
+
+           </com.google.android.material.textfield.TextInputLayout>
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/email1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/name1"
+                   android:layout_marginTop="20dp"
+                   android:hint="Email-id"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/email"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false"
+                       >
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/password1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/email1"
+                   android:layout_marginTop="20dp"
+                   android:hint="password"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/password"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="textPassword"
+                       android:enabled="false"
+                       >
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/phone_number1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/password1"
+                   android:layout_marginTop="20dp"
+                   android:layout_marginStart="3dp"
+                   android:hint="phone number"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/phone_number"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="number"
+                       android:enabled="false"
+                       >
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/address1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/phone_number1"
+                   android:layout_marginTop="20dp"
+                   android:layout_marginStart="3dp"
+                   android:hint="Address"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/address"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false"
+                       >
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/semester1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/address1"
+                   android:layout_marginTop="20dp"
+                   android:layout_marginStart="3dp"
+                   android:hint="Semester"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/semester"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="number"
+                       android:enabled="false"
+                       app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/branch1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/semester1"
+                   android:layout_marginTop="20dp"
+                   android:hint="Branch"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/branch"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false">
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/enrollment1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/branch1"
+                   android:layout_marginTop="20dp"
+                   android:hint="Enrollment number"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/enrollment"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false">
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/college1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/enrollment1"
+                   android:layout_marginTop="20dp"
+                   android:hint="college name"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/college"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false">
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/designation1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/college1"
+                   android:layout_marginTop="20dp"
+                   android:hint="Designation"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/designation"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false">
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+               <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/city1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/designation1"
+                   android:layout_marginTop="20dp"
+                   android:hint="city name"
+                   android:layout_marginStart="3dp"
+                   app:boxStrokeColor="@color/colorPrimaryDark">
+
+
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:id="@+id/city"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="text"
+                       android:enabled="false"
+                       android:layout_marginBottom="20dp">
+
+                   </com.google.android.material.textfield.TextInputEditText>
+
+               </com.google.android.material.textfield.TextInputLayout>
+
+
+
+           </RelativeLayout>
+       </ScrollView>
+
+
+   </RelativeLayout>
 </FrameLayout>
